--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -26,7 +27,9 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: Dockerfile
           push: true
+          no-cache: true
           tags: |
             ghcr.io/easygoingaming/ot-tfs-runtime:latest
             ghcr.io/easygoingaming/ot-tfs-runtime:v1.6
