--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,33 @@
-server {
-    listen {{WEB_PORT}};
-    server_name _;
+worker_processes  1;
 
-    root /home/container/www;
-    index index.php index.html;
+events {
+    worker_connections  1024;
+}
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php/php8.3-fpm.sock;
-    }
+    sendfile on;
 
-    location ~ /\. {
-        deny all;
+    server {
+        listen {{WEB_PORT}};
+        server_name _;
+
+        root /home/container/www;
+        index index.php index.html;
+
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        location ~ \.php$ {
+            include /etc/nginx/snippets/fastcgi-php.conf;
+            fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+        }
+
+        location ~ /\. {
+            deny all;
+        }
     }
 }
