--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -23,7 +23,7 @@ http {
 
         location ~ \.php$ {
             include /etc/nginx/snippets/fastcgi-php.conf;
-            fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+            fastcgi_pass unix:/home/container/php-fpm.sock;
         }
 
         location ~ /\. {
