--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,9 +22,10 @@ http {
         }
 
         location ~ \.php$ {
-            include /etc/nginx/snippets/fastcgi-php.conf;
-            fastcgi_pass unix:/home/container/php-fpm.sock;
-        }
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_pass unix:/home/container/php-fpm.sock;
+}
 
         location ~ /\. {
             deny all;
