--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,22 @@
-worker_processes  1;
+worker_processes 1;
+pid /home/container/nginx/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    client_body_temp_path /home/container/nginx/client_body;
+    proxy_temp_path       /home/container/nginx/proxy;
+    fastcgi_temp_path    /home/container/nginx/fastcgi;
+    uwsgi_temp_path      /home/container/nginx/uwsgi;
+    scgi_temp_path       /home/container/nginx/scgi;
+
+    access_log /home/container/nginx/logs/access.log;
+    error_log  /home/container/nginx/logs/error.log warn;
+
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     sendfile on;
 
@@ -22,32 +32,15 @@ http {
         }
 
         location ~ \.php$ {
-    fastcgi_pass unix:/home/container/php-fpm.sock;
-    fastcgi_index index.php;
+            fastcgi_pass unix:/home/container/php-fpm.sock;
+            fastcgi_index index.php;
 
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param QUERY_STRING    $query_string;
-    fastcgi_param REQUEST_METHOD  $request_method;
-    fastcgi_param CONTENT_TYPE    $content_type;
-    fastcgi_param CONTENT_LENGTH  $content_length;
-
-    fastcgi_param SCRIPT_NAME     $fastcgi_script_name;
-    fastcgi_param REQUEST_URI     $request_uri;
-    fastcgi_param DOCUMENT_URI    $document_uri;
-    fastcgi_param DOCUMENT_ROOT   $document_root;
-    fastcgi_param SERVER_PROTOCOL $server_protocol;
-    fastcgi_param REQUEST_SCHEME  $scheme;
-    fastcgi_param HTTPS           $https if_not_empty;
-
-    fastcgi_param GATEWAY_INTERFACE CGI/1.1;
-    fastcgi_param SERVER_SOFTWARE nginx/$nginx_version;
-
-    fastcgi_param REMOTE_ADDR     $remote_addr;
-    fastcgi_param REMOTE_PORT     $remote_port;
-    fastcgi_param SERVER_ADDR     $server_addr;
-    fastcgi_param SERVER_PORT     $server_port;
-    fastcgi_param SERVER_NAME     $server_name;
-}
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param QUERY_STRING    $query_string;
+            fastcgi_param REQUEST_METHOD  $request_method;
+            fastcgi_param CONTENT_TYPE    $content_type;
+            fastcgi_param CONTENT_LENGTH  $content_length;
+        }
 
         location ~ /\. {
             deny all;
