Change document root for Nginx configuration

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -24,7 +24,7 @@ http {
         listen {{WEB_PORT}};
         server_name _;
 
-        root /home/container/www;
+        root /home/container/myaac;
         index index.php index.html;
 
         location / {
